SourceMetaData/src/objects/Related_Goal__c.object
<CustomObject>
    <description>A lookup table to enable many-to-many case inter-relationships.</description>
    <fields>
        <fullName>Goal_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Goal From</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Related Goals</relationshipLabel>
        <relationshipName>Associated_Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Goal_To_Created_Date__c</fullName>
        <formula>Goal_To__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal To Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Goal_To_Status__c</fullName>
        <formula>TEXT(Goal_To__r.Status )</formula>
        <label>Goal To Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_To_Subject__c</fullName>
        <formula>TRIM(Goal_To__r.Subject)</formula>
        <label>Goal To Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Goal To</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Related Goals (Goal To)</relationshipLabel>
        <relationshipName>Associated_Goals_To</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Related Goal</label>
    <nameField>
        <displayFormat>R{00000000}</displayFormat>
        <label>Related Goal Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Goals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>